--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
 .success {
   opacity: 0;
   visibility: hidden;
-  transition: all 8; }
+  transition: all 2s; }
 
 .survey-form {
   width: 500px;
@@ -16,4 +16,5 @@
     transform: rotateZ(90deg) translateY(200px); }
   .survey-form:target ~ .success {
     opacity: 1;
-    visibility: visible; }
+    visibility: visible;
+    transform: translateY(-300px); }
