--- a/Sass/animation/_hingeAnimation.scss
+++ b/Sass/animation/_hingeAnimation.scss
@@ -6,7 +6,7 @@
 .success{
     opacity: 0;
     visibility: hidden;
-    transition: all 8;
+    transition: all 2s;
 }
 .survey-form{
     width: 500px;
@@ -19,5 +19,6 @@
     &:target ~ .success{
         opacity: 1;
         visibility: visible;
+        transform: translateY(-300px);
     }
 }
