--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,8 @@
 .animation-controller {
   text-decoration: none;
   color: red;
-  font-size: 16px; }
+  font-size: 16px;
+  transition: all 2s; }
 
 .success {
   opacity: 0;
@@ -10,7 +11,7 @@
 
 .survey-form {
   width: 500px;
-  transition: all 2s; }
+  transition: all 2s ease-in-out; }
   .survey-form:target {
     transform-origin: top left;
     transform: rotateZ(90deg) translateY(200px); }
